Moved includes to the pages

--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -4,3 +4,5 @@ description: Get your webiste up and running online in no time using current sta
 header: CMintS starter
 ---
 
+<% include slides/_intro %>
+<% include slides/_second %>
